assignment4/log.txt
mkdir -p build/obj build/bin data build/plots
g++ -std=c++17  -g -Wall -Wextra -Wpedantic -O3 -march=native -Iinclude -I./fastflow -c src/utils.cpp -o build/obj/utils.o
g++ -std=c++17  -g -Wall -Wextra -Wpedantic -O3 -march=native -Iinclude -I./fastflow -c src/performance_timer.cpp -o build/obj/performance_timer.o
g++ -std=c++17  -g -Wall -Wextra -Wpedantic -O3 -march=native -Iinclude -I./fastflow -c src/mergesort_common.cpp -o build/obj/mergesort_common.o
g++ -std=c++17  -g -Wall -Wextra -Wpedantic -O3 -march=native -Iinclude -I./fastflow -c src/mergesort_ff.cpp -o build/obj/mergesort_ff.o
In file included from ./fastflow/ff/lb.hpp:42,
                 from ./fastflow/ff/farm.hpp:65,
                 from src/mergesort_ff.cpp:12:
./fastflow/ff/node.hpp: In member function ‘virtual bool ff::ff_node::change_node(ff::ff_node*, ff::ff_node*, bool, bool)’:
./fastflow/ff/node.hpp:1037:39: warning: unused parameter ‘old’ [-Wunused-parameter]
 1037 |     virtual bool change_node(ff_node* old, ff_node* n, bool cleanup=false, bool remove_from_cleanuplist=false) { return false;}
      |                              ~~~~~~~~~^~~
./fastflow/ff/node.hpp:1037:53: warning: unused parameter ‘n’ [-Wunused-parameter]
 1037 |     virtual bool change_node(ff_node* old, ff_node* n, bool cleanup=false, bool remove_from_cleanuplist=false) { return false;}
      |                                            ~~~~~~~~~^
./fastflow/ff/node.hpp:1037:61: warning: unused parameter ‘cleanup’ [-Wunused-parameter]
 1037 |     virtual bool change_node(ff_node* old, ff_node* n, bool cleanup=false, bool remove_from_cleanuplist=false) { return false;}
      |                                                        ~~~~~^~~~~~~~~~~~~
./fastflow/ff/node.hpp:1037:81: warning: unused parameter ‘remove_from_cleanuplist’ [-Wunused-parameter]
 1037 |     virtual bool change_node(ff_node* old, ff_node* n, bool cleanup=false, bool remove_from_cleanuplist=false) { return false;}
      |                                                                            ~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from ./fastflow/ff/farm.hpp:70:
./fastflow/ff/all2all.hpp: In member function ‘virtual int ff::ff_a2a::prepare()’:
./fastflow/ff/all2all.hpp:168:22: error: ‘isfarm_withcollector’ was not declared in this scope
  168 |                 if (!isfarm_withcollector(last)) { // ... with no collector
      |                      ^~~~~~~~~~~~~~~~~~~~
./fastflow/ff/all2all.hpp: In constructor ‘ff::ff_a2a::ff_a2a(bool, int, int, bool)’:
./fastflow/ff/all2all.hpp:339:17: warning: unused parameter ‘notusedanymore’ [-Wunused-parameter]
  339 |     ff_a2a(bool notusedanymore=false,
      |            ~~~~~^~~~~~~~~~~~~~~~~~~~
./fastflow/ff/all2all.hpp: In copy constructor ‘ff::ff_a2a::ff_a2a(const ff::ff_a2a&)’:
./fastflow/ff/all2all.hpp:347:5: warning: base class ‘class ff::ff_node’ should be explicitly initialized in the copy constructor [-Wextra]
  347 |     ff_a2a(const ff_a2a& p):prepared(false) {
      |     ^~~~~~
./fastflow/ff/farm.hpp: In member function ‘virtual int ff::ff_farm::prepare()’:
./fastflow/ff/farm.hpp:296:21: error: ‘ff_pipeline’ was not declared in this scope
  296 |                     ff_pipeline* pipe=reinterpret_cast<ff_pipeline*>(workers[i]);
      |                     ^~~~~~~~~~~
./fastflow/ff/farm.hpp:296:56: error: ‘ff_pipeline’ does not name a type
  296 |                     ff_pipeline* pipe=reinterpret_cast<ff_pipeline*>(workers[i]);
      |                                                        ^~~~~~~~~~~
./fastflow/ff/farm.hpp:296:67: error: expected ‘>’ before ‘*’ token
  296 |                     ff_pipeline* pipe=reinterpret_cast<ff_pipeline*>(workers[i]);
      |                                                                   ^
./fastflow/ff/farm.hpp:297:44: error: request for member ‘get_node’ in ‘* pipe’, which is of non-class type ‘int(int*) noexcept’
  297 |                     ff_node* node0 = pipe->get_node(0);
      |                                            ^~~~~~~~
./fastflow/ff/farm.hpp:298:44: error: request for member ‘get_lastnode’ in ‘* pipe’, which is of non-class type ‘int(int*) noexcept’
  298 |                     ff_node* nodeN = pipe->get_lastnode();
      |                                            ^~~~~~~~~~~~
./fastflow/ff/farm.hpp: In constructor ‘ff::ff_farm::ff_farm(bool, int, int, bool, size_t, bool)’:
./fastflow/ff/farm.hpp:796:27: warning: unused parameter ‘fixedsize’ [-Wunused-parameter]
  796 |                      bool fixedsize=FF_FIXED_SIZE):
make: *** [Makefile:63: build/obj/mergesort_ff.o] Error 1
